# mproto

./: Cargo.toml  README.md
crates/mproto-codegen/: Cargo.toml  README.md
crates/mproto-codegen/src/: ast.rs  db.rs  lib.rs  parse.rs
crates/mproto-codegen/src/codegen/: codegen_cx.rs  mod.rs  name_util.rs  type_base_len.rs
crates/mproto-codegen/src/codegen/js/: common.rs  encoder_common.rs  js_enum.rs  js_struct.rs  mod.rs  package.rs
crates/mproto-codegen/src/codegen/js/templates/: package.json  tsconfig.json
crates/mproto-codegen/src/codegen/rust/: common.rs  mod.rs  package.rs  rust_enum.rs  rust_struct.rs
crates/mproto-codegen/src/codegen/rust/templates/: cargo.toml
crates/mprotoc/: Cargo.toml  README.md
crates/mprotoc/src/: main.rs
integ-tests/: .gitignore  run.sh
integ-tests/proto/: test.mproto
runtime/rust/: Cargo.toml  README.md
runtime/rust/src/: boxed.rs  copy_primitives.rs  decode_cursor.rs  encode_cursor.rs  lib.rs  list.rs  option.rs  result.rs  string.rs  tests.rs
runtime/typescript/: README.md  package-lock.json  package.json
runtime/typescript/src/: box.ts  decode_cursor.ts  encode_cursor.ts  index.ts  list.ts  option.ts  primitives.ts  result.ts  string.ts
runtime/typescript/tests/: index.ts
