[package]
name = "mprotoc"
version = "0.0.2"
edition = "2024"
description = "mproto compiler - generate code to encode and decode mproto objects in multiple languages"
repository = "https://github.com/modrpc-org/mproto"
documentation = "https://docs.rs/mproto"
keywords = ["serialization", "compiler"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
mproto-codegen = { version = "0.0.2", path = "../mproto-codegen" }
clap = { version = "4", features = ["derive"] }
genco = "0.17"
